k8s/opencampus/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencampus-api
  namespace: opencampus
  labels:
    app: opencampus-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opencampus-api
  template:
    metadata:
      labels:
        app: opencampus-api
    spec:
      containers:
        - name: api
          image: ghcr.io/manamana32321/opencampus-api:latest
          ports:
            - containerPort: 4000
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 500m
