k8s/opencampus/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencampus-api
  namespace: opencampus
spec:
  selector:
    app: opencampus-api
  ports:
    - port: 4000
      targetPort: 4000
