k8s/opencampus/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencampus-api
  namespace: opencampus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.opencampus.json-server.win
      secretName: opencampus-api-tls
  rules:
    - host: api.opencampus.json-server.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opencampus-api
                port:
                  number: 4000
